--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
- "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline" "prepublishOnly": "npm run build"
+ "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
+ "prepublishOnly": "npm run build",
    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
