--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "project-lvl1-s508",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.js", "bin": {
+ "brain-games": "dist/bin/brain-games.js"
+}
+
+
   "scripts": {
  "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
  "prepublishOnly": "npm run build",
