--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
 
 
   "scripts": {
- "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
- "prepublishOnly": "npm run build",
-   "test": "echo \"Error: no test specified\" && exit 1"
-  },
+ "test": "echo \"Error: no test specified\" && exit 1"
+,
+"build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
+ "prepublishOnly": "npm run build"
+     },
   "author": "",
   "license": "ISC",
   "devDependencies": {
