--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "project-lvl1-s508",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js","bin": {
+  "main": "index.js",
+"bin": {
  "brain-games": "dist/bin/brain-games.js"
  },
 "files": [
@@ -11,7 +12,8 @@
 
    "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-, "build": "cross-env NODE_ENV=production babel src --out-dir dist --source-maps inline", "prepublishOnly": "npm run build"
+, "build": "cross-env NODE_ENV=production babel src --out-dir dist --source-maps inline", 
+"prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
