--- a/package.json
+++ b/package.json
@@ -3,17 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-"bin": {
- "brain-games": "dist/bin/brain-games.js"
- },
-"files": [
+  "bin": {
+    "brain-games": "dist/bin/brain-games.js"
+  },
+  "files": [
     "dist"
-],
-
-   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-, "build": "cross-env NODE_ENV=production babel src --out-dir dist --source-maps inline", 
-"prepublishOnly": "npm run build"
+  ],
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cross-env NODE_ENV=production babel src --out-dir dist --source-maps inline",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -31,5 +30,8 @@
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.4",
     "cross-env": "^5.2.0"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.9"
   }
 }
