--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "type": "git",
     "url": "git+https://github.com/Kross97/project-lvl1-s508.git"
   },
+  "jest": {
+    "testEnvironment": "node"
+  },
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -29,9 +32,17 @@
     "@babel/core": "^7.4.4",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.4",
-    "cross-env": "^5.2.0"
+    "cross-env": "^5.2.0",
+    "jest": "^24.8.0"
   },
   "dependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jest": "^22.5.1",
+    "eslint-plugin-lodash-fp": "^2.2.0-a1",
     "readline-sync": "^1.4.9"
   }
 }
