--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jest": "^24.8.0"
   },
   "dependencies": {
+    "@babel/plugin-proposal-pipeline-operator": "^7.3.2",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
