--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bezh1",
   "version": "1.3.1",
-  "description": "Brain-games , отработка матеамтических операций",
+  "description": "Brain-games , math games",
   "main": "index.js",
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
@@ -23,9 +23,6 @@
     "type": "git",
     "url": "git+https://github.com/Kross97/project-lvl1-s508.git"
   },
-  "jest": {
-    "testEnvironment": "node"
-  },
   "keywords": [
     "brain",
     "games",
@@ -38,15 +35,14 @@
     "url": "https://github.com/Kross97/project-lvl1-s508/issues"
   },
   "homepage": "https://github.com/Kross97/project-lvl1-s508#readme",
+
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.4",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.4",
     "cross-env": "^5.2.0",
-    "jest": "^24.8.0"
-  },
-  "dependencies": {
+    "jest": "^24.8.0",
     "@babel/plugin-proposal-pipeline-operator": "^7.3.2",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
@@ -54,7 +50,10 @@
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jest": "^22.5.1",
-    "eslint-plugin-lodash-fp": "^2.2.0-a1",
+    "eslint-plugin-lodash-fp": "^2.2.0-a1"
+  },
+
+  "dependencies": {
     "readline-sync": "^1.4.9"
   }
 }
