--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jest": "^22.5.1",
     "eslint-plugin-lodash-fp": "^2.2.0-a1"
   },
   "dependencies": {
